--- a/package.json
+++ b/package.json
@@ -8,7 +8,20 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "1.2.8",
+    "@fortawesome/free-solid-svg-icons": "5.5.0",
+    "@fortawesome/vue-fontawesome": "0.1.2",
+    "@types/jquery": "^3.3.22",
+    "@types/lodash": "^4.14.118",
+    "@types/socket.io": "^2.1.0",
+    "@types/socket.io-client": "^1.4.32",
+    "axios": "0.18.0",
+    "bootstrap-vue": "^2.0.0-rc.11",
+    "nodejs-websocket": "^1.7.2",
+    "normalize.css": "8.0.1",
+    "nprogress": "0.2.0",
     "register-service-worker": "^1.0.0",
+    "socket.io": "^2.2.0",
     "vue": "^2.5.17",
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^7.0.0",
@@ -27,8 +40,11 @@
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0-0",
     "node-sass": "^4.9.0",
+    "jquery": "^3.3.1",
     "sass-loader": "^7.0.1",
     "typescript": "^3.0.0",
+    "vue-cli-plugin-bootstrap": "^1.0.0-alpha.0",
+    "vue-cli-plugin-bootstrap-vue": "^0.1.0",
     "vue-template-compiler": "^2.5.17"
   }
 }
